fixed alignment of flex items to body

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,18 @@
 body{
     background-color: hsl(233,47%,7%); /* hue, saturation and lightness */
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
 }
 
 .flex-container {
     display: flex;
     flex-wrap: nowrap; 
     flex-direction: column;
-
-    /* Justify content */
-    /* justify-content:flex-start; */
+  
 
     /* Align all elements to center */
     align-items: center;
 
-    /* Define width and height relative to body */
-    width: 90%;
-    height: 70%;
+
 
 }
 .text-container{
